--- a/css/custom.css
+++ b/css/custom.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    overflow-x: hidden
+}
+
 .navbar.transparent.navbar-inverse .navbar-inner {
     border-width: 0px;
     -webkit-box-shadow: 0px 0px;
@@ -260,6 +264,11 @@ html {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.10), 0 6px 6px rgba(0, 0, 0, 0.05);
     animation: shadow-pulse 1s infinite;
     cursor: pointer;
+    transition: .5s;
+}
+
+.cta-button:hover {
+    transition: .5s;
 }
 
 @keyframes shadow-pulse {
@@ -273,4 +282,22 @@ html {
 
 .card {
     border-radius: 0px;
+}
+
+.smart-scroll {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+.scrolled-down {
+    transform: translateY(-100%);
+    transition: all 0.3s ease-in-out;
+}
+
+.scrolled-up {
+    transform: translateY(0);
+    transition: all 0.3s ease-in-out;
 }
