--- a/css/custom.css
+++ b/css/custom.css
@@ -296,3 +296,202 @@ body {
     transform: translateY(0);
     transition: all 0.3s ease-in-out;
 }
+
+.ml5 {
+    position: relative;
+    font-weight: 300;
+    font-size: 4.5em;
+    color: #402d2d;
+  }
+  
+  .ml5 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.1em;
+    padding-right: 0.05em;
+    padding-bottom: 0.15em;
+    line-height: 1em;
+  }
+  
+  .ml5 .line {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    height: 3px;
+    width: 100%;
+    background-color: #402d2d;
+    transform-origin: 0.5 0;
+  }
+  
+  .ml5 .ampersand {
+    font-family: Baskerville, serif;
+    font-style: italic;
+    font-weight: 400;
+    width: 1em;
+    margin-right: -0.1em;
+    margin-left: -0.1em;
+  }
+  
+  .ml5 .letters {
+    display: inline-block;
+    opacity: 0;
+  }
+  #loading {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: center no-repeat #fff;
+}
+
+@-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+/* .no-js #loader { display: none;	}
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+
+.loader {
+	border: 10px solid #f3f3f3;
+	border-radius: 50%;
+	border-top: 10px solid #3498db;
+	border-bottom: 10px solid #FFC107;
+	width: 150px;
+	height: 150px;
+	left: 43.5%;
+	top: 20%;
+	-webkit-animation: spin 2s linear infinite;
+	position: fixed;
+	animation: spin 2s linear infinite;
+}
+
+.textLoader{
+	position: fixed;
+	top: 56%;
+	left: 45.6%;
+	color: #34495e;
+}
+	
+/*-- responsive --*/
+	@media screen and (max-width: 1034px){
+		.textLoader{
+			left: 46.2%;
+		}
+	}
+
+	@media screen and (max-width: 824px){
+		.textLoader {
+		    left: 47.2%;
+		}
+	}
+
+	@media screen and (max-width: 732px){
+		.textLoader {
+			left: 48.2%;
+		}
+	}
+
+	@media screen and (max-width: 500px){
+		.loader{
+			left: 36.5%;;
+		}
+		.textLoader {
+			left: 40.5%;
+		}
+	}
+
+	@media screen and (max-height: 432px){
+		.textLoader {
+		    top: 65%;
+		}
+	}
+
+	@media screen and (max-height: 350px){
+		.textLoader {
+		    top: 75%;
+		}
+	}
+
+	@media screen and (max-height: 312px){
+		.textLoader {
+		 	display: none;
+		}
+	}
+
+    @import url("https://fonts.googleapis.com/css?family=Dosis:600,800");
+* {
+  box-sizing: border-box;
+}
+
+#loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  font-family: "Dosis", sans-serif;
+  color: #3f3c3c;
+}
+
+.site-logo {
+  display: flex;
+  align-items: center;
+  transform: translateZ(0);
+}
+
+[id=logo] {
+  position: relative;
+  flex: 0 0 3.75rem;
+  width: 3.75rem;
+  z-index: 2;
+}
+[id=logo] polygon {
+  transform-origin: 50%;
+}
+[id=logo] circle {
+  transform-origin: 80% 80%;
+}
+
+.site-title {
+  position: relative;
+  overflow: hidden;
+  margin-left: -1.5rem;
+  z-index: 1;
+  transform: translateZ(0);
+}
+
+.site-title-text {
+  padding: 0.25rem 0.375rem 0.25rem 1.75rem;
+  color: #3f3c3c;
+  font-size: 2rem;
+  font-weight: 800;
+}
+.site-title-text span {
+  margin-left: 0.015625rem;
+  color: #00b4ff;
+}
+
+.button-restart {
+  position: fixed;
+  bottom: 1.5rem;
+  padding: 0.375rem 1.5rem 0.5rem 1.5rem;
+  font-family: "Dosis", sans-serif;
+  font-size: 0.875rem;
+  font-weight: 600;
+  letter-spacing: 0.03125rem;
+  outline: none;
+  cursor: pointer;
+  color: #00b4ff;
+  background-color: transparent;
+  border: 0.125rem solid #00b4ff;
+  border-radius: 0.125rem;
+  transition: color 0.2s ease-out, transform 0.2s ease-out;
+} 
