--- a/css/custom.css
+++ b/css/custom.css
@@ -476,22 +476,8 @@ body {
 }
 .site-title-text span {
   margin-left: 0.015625rem;
-  color: #00b4ff;
+  /* color: #00b4ff; */
+  color: #0057fe
 }
-
-.button-restart {
-  position: fixed;
-  bottom: 1.5rem;
-  padding: 0.375rem 1.5rem 0.5rem 1.5rem;
-  font-family: "Dosis", sans-serif;
-  font-size: 0.875rem;
-  font-weight: 600;
-  letter-spacing: 0.03125rem;
-  outline: none;
-  cursor: pointer;
-  color: #00b4ff;
-  background-color: transparent;
-  border: 0.125rem solid #00b4ff;
-  border-radius: 0.125rem;
-  transition: color 0.2s ease-out, transform 0.2s ease-out;
+nsition: color 0.2s ease-out, transform 0.2s ease-out;
 } 
