--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,9 @@ body {
 #myVideo {
     position: relative;
     top: 0;
-    min-width: 100%;
+    width: 100%;
+    height: 500px;
+    background-size: cover;
 }
 
 .mast-head {
@@ -301,19 +303,19 @@ body {
     position: relative;
     font-weight: 300;
     font-size: 4.5em;
-    color: #402d2d;
-  }
-  
-  .ml5 .text-wrapper {
+    color: white;
+}
+
+.ml5 .text-wrapper {
     position: relative;
     display: inline-block;
     padding-top: 0.1em;
     padding-right: 0.05em;
     padding-bottom: 0.15em;
     line-height: 1em;
-  }
-  
-  .ml5 .line {
+}
+
+.ml5 .line {
     position: absolute;
     left: 0;
     top: 0;
@@ -321,41 +323,52 @@ body {
     margin: auto;
     height: 3px;
     width: 100%;
-    background-color: #402d2d;
+    background-color: white;
     transform-origin: 0.5 0;
-  }
-  
-  .ml5 .ampersand {
+}
+
+.ml5 .ampersand {
     font-family: Baskerville, serif;
     font-style: italic;
     font-weight: 400;
     width: 1em;
     margin-right: -0.1em;
     margin-left: -0.1em;
-  }
-  
-  .ml5 .letters {
+}
+
+.ml5 .letters {
     display: inline-block;
     opacity: 0;
-  }
-  #loading {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: center no-repeat #fff;
+}
+
+#loading {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background: center no-repeat #fff;
 }
 
 @-webkit-keyframes spin {
-	0% { -webkit-transform: rotate(0deg); }
-	100% { -webkit-transform: rotate(360deg); }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
+
 @keyframes spin {
-	0% { transform: rotate(0deg); }
-	100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
+
 
 /* .no-js #loader { display: none;	}
 .js #loader { display: block; position: absolute; left: 100px; top: 0; }
@@ -382,102 +395,114 @@ body {
 }
 	
 /*-- responsive --*/
-	@media screen and (max-width: 1034px){
-		.textLoader{
-			left: 46.2%;
-		}
-	}
 
-	@media screen and (max-width: 824px){
-		.textLoader {
-		    left: 47.2%;
-		}
-	}
+@media screen and (max-width: 1034px) {
+    .textLoader {
+        left: 46.2%;
+    }
+}
 
-	@media screen and (max-width: 732px){
-		.textLoader {
-			left: 48.2%;
-		}
-	}
+@media screen and (max-width: 824px) {
+    .textLoader {
+        left: 47.2%;
+    }
+}
 
-	@media screen and (max-width: 500px){
-		.loader{
-			left: 36.5%;;
-		}
-		.textLoader {
-			left: 40.5%;
-		}
-	}
+@media screen and (max-width: 732px) {
+    .textLoader {
+        left: 48.2%;
+    }
+}
 
-	@media screen and (max-height: 432px){
-		.textLoader {
-		    top: 65%;
-		}
-	}
+@media screen and (max-width: 500px) {
+    .loader {
+        left: 36.5%;
+        ;
+    }
+    .textLoader {
+        left: 40.5%;
+    }
+    .navbar-brand {
+        margin: auto
+    }
+    #second-header {
+        display: none;
+    }
+    .letters {
+        font-size: 20pt;
+    }
+}
 
-	@media screen and (max-height: 350px){
-		.textLoader {
-		    top: 75%;
-		}
-	}
+@media screen and (max-height: 432px) {
+    .textLoader {
+        top: 65%;
+    }
+}
 
-	@media screen and (max-height: 312px){
-		.textLoader {
-		 	display: none;
-		}
-	}
+@media screen and (max-height: 350px) {
+    .textLoader {
+        top: 75%;
+    }
+}
 
-    @import url("https://fonts.googleapis.com/css?family=Dosis:600,800");
+@media screen and (max-height: 312px) {
+    .textLoader {
+        display: none;
+    }
+}
+
+@import url("https://fonts.googleapis.com/css?family=Dosis:600,800");
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 #loading {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  font-family: "Dosis", sans-serif;
-  color: #3f3c3c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    font-family: "Dosis", sans-serif;
+    color: #3f3c3c;
 }
 
 .site-logo {
-  display: flex;
-  align-items: center;
-  transform: translateZ(0);
+    display: flex;
+    align-items: center;
+    transform: translateZ(0);
 }
 
 [id=logo] {
-  position: relative;
-  flex: 0 0 3.75rem;
-  width: 3.75rem;
-  z-index: 2;
+    position: relative;
+    flex: 0 0 3.75rem;
+    width: 3.75rem;
+    z-index: 2;
 }
+
 [id=logo] polygon {
-  transform-origin: 50%;
+    transform-origin: 50%;
 }
+
 [id=logo] circle {
-  transform-origin: 80% 80%;
+    transform-origin: 80% 80%;
 }
 
 .site-title {
-  position: relative;
-  overflow: hidden;
-  margin-left: -1.5rem;
-  z-index: 1;
-  transform: translateZ(0);
+    position: relative;
+    overflow: hidden;
+    margin-left: -1.5rem;
+    z-index: 1;
+    transform: translateZ(0);
 }
 
 .site-title-text {
-  padding: 0.25rem 0.375rem 0.25rem 1.75rem;
-  color: #3f3c3c;
-  font-size: 2rem;
-  font-weight: 800;
+    padding: 0.25rem 0.375rem 0.25rem 1.75rem;
+    color: #3f3c3c;
+    font-size: 2rem;
+    font-weight: 800;
 }
+
 .site-title-text span {
-  margin-left: 0.015625rem;
-  /* color: #00b4ff; */
-  color: #0057fe
+    margin-left: 0.015625rem;
+    /* color: #00b4ff; */
+    color: #0057fe
 }
-nsition: color 0.2s ease-out, transform 0.2s ease-out;
-} 
